--- a/includes/templates/YOUR_TEMPLATE/css/popup_vat4eu_formats.css
+++ b/includes/templates/YOUR_TEMPLATE/css/popup_vat4eu_formats.css
@@ -2,3 +2,4 @@
 h1, .close-it { text-align: center; }
 table { margin: 0 auto; }
 td, th { padding: 5px; border-top: 1px solid #898989; text-align: left; }
+.no-fouc {display: block!important;}
